--- a/HomeMates/VIew/Base/TaskTableViewCell/TasksTableViewCell.xib
+++ b/HomeMates/VIew/Base/TaskTableViewCell/TasksTableViewCell.xib
@@ -132,17 +132,17 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="contributionPersentView" destination="tUn-P4-yu8" id="Qe2-C0-fsB"/>
-                <outlet property="firstTextContraint" destination="XbR-pH-z0J" id="43l-Qc-scN"/>
-                <outlet property="memberNameText" destination="0RN-Pe-QGG" id="RM4-0S-P8x"/>
-                <outlet property="pointText" destination="K7C-DR-feW" id="AH1-jx-E0t"/>
-                <outlet property="secondTextContraint" destination="gyC-XN-MYu" id="Gbp-Oi-ogj"/>
+                <outlet property="firstTextConstraint" destination="XbR-pH-z0J" id="43l-Qc-scN"/>
+                <outlet property="memberNameTextLbl" destination="0RN-Pe-QGG" id="RM4-0S-P8x"/>
+                <outlet property="pointTextLbl" destination="K7C-DR-feW" id="AH1-jx-E0t"/>
+                <outlet property="secondTextConstraint" destination="gyC-XN-MYu" id="Gbp-Oi-ogj"/>
                 <outlet property="taskImage" destination="SMu-4E-Fsk" id="fGj-mx-bSK"/>
                 <outlet property="taskLeftBtn" destination="djh-Vm-S9V" id="haM-r0-DTU"/>
-                <outlet property="taskNameText" destination="ovV-4u-RGL" id="Bea-u9-HQk"/>
-                <outlet property="taskPeriodText" destination="aw5-qs-8Zo" id="vuk-01-Qpd"/>
+                <outlet property="taskNameTextLbl" destination="ovV-4u-RGL" id="Bea-u9-HQk"/>
+                <outlet property="taskPeriodTextLbl" destination="aw5-qs-8Zo" id="vuk-01-Qpd"/>
                 <outlet property="taskRightBtn" destination="a7J-EE-SG2" id="yoI-j9-esp"/>
-                <outlet property="taskTotalPoints" destination="A0y-HS-z66" id="4VA-wi-0XN"/>
-                <outlet property="totalPointsText" destination="hrz-b3-IqO" id="BQ3-l7-fri"/>
+                <outlet property="taskTotalPointsLbl" destination="A0y-HS-z66" id="4VA-wi-0XN"/>
+                <outlet property="totalPointsTextLbl" destination="hrz-b3-IqO" id="BQ3-l7-fri"/>
             </connections>
             <point key="canvasLocation" x="47.10144927536232" y="55.915178571428569"/>
         </tableViewCell>
