--- a/HomeMates/VIew/Auth.storyboard
+++ b/HomeMates/VIew/Auth.storyboard
@@ -251,8 +251,8 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="設定名稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GPP-fq-WSv">
-                                        <rect key="frame" x="28" y="46" width="62" height="18"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="使用者名稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GPP-fq-WSv">
+                                        <rect key="frame" x="28" y="46" width="77" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" name="Y4"/>
                                         <nil key="highlightedColor"/>
@@ -291,6 +291,17 @@
                                     <constraint firstItem="beu-az-Miy" firstAttribute="top" secondItem="as4-bt-K0c" secondAttribute="bottom" constant="6" id="vYQ-xl-R13"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="設定基本資料" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EyC-dJ-GJh">
+                                <rect key="frame" x="107.5" y="156" width="160" height="36"/>
+                                <color key="backgroundColor" name="P1"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="ikg-Mr-kTW"/>
+                                    <constraint firstAttribute="height" constant="36" id="zxf-LS-UzI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" name="W1"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" name="Y1"/>
@@ -299,9 +310,11 @@
                             <constraint firstItem="yAX-0x-NuT" firstAttribute="trailing" secondItem="2cP-hl-UnD" secondAttribute="trailing" id="LHB-9T-NSY"/>
                             <constraint firstItem="yAX-0x-NuT" firstAttribute="trailing" secondItem="oLC-xA-Ww0" secondAttribute="trailing" id="MFR-CO-Fcc"/>
                             <constraint firstItem="CfO-O1-CP0" firstAttribute="top" secondItem="2cP-hl-UnD" secondAttribute="bottom" constant="90" id="Nw9-Fd-vm2"/>
+                            <constraint firstItem="EyC-dJ-GJh" firstAttribute="top" secondItem="2cP-hl-UnD" secondAttribute="bottom" constant="70" id="SxN-Ak-eW0"/>
                             <constraint firstAttribute="bottom" secondItem="oLC-xA-Ww0" secondAttribute="bottom" id="iK8-7l-zYv"/>
                             <constraint firstItem="2cP-hl-UnD" firstAttribute="top" secondItem="ivo-cr-4Uk" secondAttribute="top" id="sdC-o5-Ehf"/>
                             <constraint firstItem="oLC-xA-Ww0" firstAttribute="leading" secondItem="yAX-0x-NuT" secondAttribute="leading" id="wYd-JF-9NE"/>
+                            <constraint firstItem="EyC-dJ-GJh" firstAttribute="centerX" secondItem="ivo-cr-4Uk" secondAttribute="centerX" id="xiq-wB-TVt"/>
                             <constraint firstItem="2cP-hl-UnD" firstAttribute="leading" secondItem="yAX-0x-NuT" secondAttribute="leading" id="z6R-lq-4b1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yAX-0x-NuT"/>
@@ -310,7 +323,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8fT-z7-YAf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="980" y="39"/>
+            <point key="canvasLocation" x="980" y="38.23088455772114"/>
         </scene>
     </scenes>
     <resources>
