--- a/HomeMates/VIew/Base.lproj/Main.storyboard
+++ b/HomeMates/VIew/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Tab Bar View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="HMTabBarViewController" id="BYZ-38-t0r" customClass="HMTabBarViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController"/>
+                <viewController id="BYZ-38-t0r" customClass="HMTabBarViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
